# horses

./: .env  check_supabase.py  debug_teletrak.html  mock_run.py  pyproject.toml  report_carreras.py  requirements.txt  setup_project.py  supabase_schema.sql  test_mc.py  test_mc_pure.py  test_query.py
src/dashboard/: app.py
src/etl/: batch_ingest.py  core_api_ingester.py  results_ingester.py  teletrak_scraper.py
src/features/: engine.py
src/model/: predictor.py  value_bet.py
